# selenium-side-manager

./: README.md  pyproject.toml
docs/ide_setup/: README.md
gitlab-runner/: gitlab-ci.yml  gitlab_runner_cloud_init.sh
selenium_side_manager/: project_split.py  projects_rebuild.py
